...
        android:id="@+id/nav_library"
        android:name="com.example.librarytogether.feature.library.LibraryFragment"
        android:label="@string/nav_library"
        tools:layout="@layout/fragment_library">

        <action
            android:id="@+id/action_libraryFragment_to_writeReviewFragment"
            app:destination="@id/writeReviewFragment" />

        <action
            android:id="@+id/action_libraryFragment_to_addBookFragment"
            app:destination="@id/addBookFragment" />
    </fragment>
...
